optimised code and added reusable side navigation options

--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block title %}Admin | Dashboard{% endblock %} {%
+{% extends "base.html" %}
+{%set username=(name)%}
+{% block title %}Admin | Dashboard{% endblock %} {%
 block body %}
 <h1>Welcome Admin</h1>
 
