--- a/App/Views/menu.html
+++ b/App/Views/menu.html
@@ -1,53 +1,16 @@
-{% if islogin %}
+{% if islogin and listItems %}
 <div class="flex flex-col w-80 sm:w-56 bg-white rounded-r-3xl overflow-hidden">
     <ul class="flex flex-col py-4">
+        {% for item in listItems %}
         <li>
-            <a href="/student"
+            <a href="{{item.url}}"
                 class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                 <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                        class="fas fa-home"></i></span>
-                <span class="text-sm font-medium">Home</span>
+                        class="{{item.icon}}"></i></span>
+                <span class="text-sm font-medium">{{item.name}}</span>
             </a>
         </li>
-        <li>
-            <a href="#"
-                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                        class="fas fa-user"></i></span>
-                <span class="text-sm font-medium">profile</span>
-            </a>
-        </li>
-        <li>
-            <a href="#"
-                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                        class="fas fa-clock"></i></span>
-                <span class="text-sm font-medium">Attendance</span>
-            </a>
-        </li>
-        <li>
-            <a href="/student/timetable"
-                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                        class="fas fa-calendar"></i></span>
-                <span class="text-sm font-medium">Timetable</span>
-            </a>
-        </li>
-        <li>
-            <a href="#"
-                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                        class="fa fa-certificate"></i></span>
-                <span class="text-sm font-medium">Marksheet</span>
-            </a>
-        </li>
-        <a href="/logout"
-            class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-            <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                    class="fas fa-sign-out-alt"></i></span>
-            <span class="text-sm font-medium">Logout</span>
-        </a>
-        </li>
+        {% endfor %}
     </ul>
 </div>
 {% endif %}
