--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -19,15 +19,27 @@
 </head>
 
 <body>
-  <nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6">
-    <div class="flex items-center flex-shrink-0 text-white mr-6">
-      <span class="text-xl tracking-tight"><img src="/media/images/rit.png" width="80" height="80" alt="logo" /></span>
+  <nav class="flex items-center justify-between h-24 min-h-full flex-nowrap bg-blue-900 p-6">
+    <div>
+      <span><img src="/media/images/rit.png" width="100" height="100" alt="logo" /></span>
     </div>
+    {%if username%}
+    <div class="flex items-center justify-end p-6 gap-5">
+      <a href="#">
+        <i class="fas fa-user fa-2x cursor pointer"></i>
+        {{username}}
+      </a>
+      <div>
+        <a href="/logout">
+          <i class="fas fa-sign-out-alt cursor pointer"></i>
+        </a>
+      </div>
+    </div>
+    {%endif%}
   </nav>
   <div class="min-h-screen flex flex-row bg-gray-100">
-    {% include 'menu.html' with {'islogin':islogin}%}
+    {% include 'menu.html' with {'islogin':islogin,'listIems':listItems}%}
     <div class="container">{% block body %} {% endblock %}</div>
-    <!-- <div>{% block footer %}hello{% endblock %}</div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script type="text/javascript">
       var successMsg = {{ SUCCESS_MESSAGE | json_encode() | raw }}
