--- a/App/Views/Teacher/Dashboard/TimeTable/TimeTable.html
+++ b/App/Views/Teacher/Dashboard/TimeTable/TimeTable.html
@@ -1,10 +1,4 @@
 {% extends "base.html" %}
-{%set islogin=1%}
-{%set username=(name)%}
-{%set
-listItems=[{name:'Home',url:'/teacher',icon:'fa fa-home'},{name:'Profile',url:'#',icon:'fa
-fa-user'},{name:'Attendance',url:'#',icon:'fa fa-clock'},{name:'Timetable',url:'/teacher/timetable/',icon:'fa
-fa-calendar'},{name:'Logout',url:'/logout',icon:'fa fa-sign-out-alt'}]%}
 {% block title %}TimeTable{% endblock %}
 {% block body %}
 
@@ -55,7 +49,7 @@ fa-calendar'},{name:'Logout',url:'/logout',icon:'fa fa-sign-out-alt'}]%}
       const self = this;
       $(this).on("click", function () {
         if ($(self).attr("data-timeTable"))
-          window.open("attendance/" + $(self).attr("data-timeTable"));
+          window.open("/teacher/attendance/" + $(self).attr("data-timeTable"));
       });
     });
     console.log("read");
