--- a/App/Views/menu.html
+++ b/App/Views/menu.html
@@ -1,4 +1,4 @@
-{% if islogin and listItems %}
+{% if islogin %}
 <div class="flex flex-col w-80 sm:w-56 bg-white rounded-r-3xl overflow-hidden">
     <ul class="flex flex-col py-4">
         {% for item in listItems %}
