--- a/App/Views/Student/Dashboard/Homepage/profile.html
+++ b/App/Views/Student/Dashboard/Homepage/profile.html
@@ -1,3 +1,101 @@
-{% extends "base.html" %} {% block title %}Student | Profile{% endblock %} {%
-block body %}{%block profile%}{%endblock%}
-{% endblock %}
+{%extends "base.html"%}{%block body%}
+<div class="bg-gray-100">
+    <div class="container mx-auto my-5 p-5">
+        <div class="md:flex no-wrap md:-mx-2 ">
+            <div class="w-full md:w-9/12 mx-2 h-64">
+                <div class="bg-white p-3 shadow-sm rounded-sm">
+                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8">
+                        <span clas="text-green-500">
+                            <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                            </svg>
+                        </span>
+                        <span class="tracking-wide">About</span>
+                    </div>
+                    <div class="text-gray-700">
+                        <div class="grid md:grid-cols-2 text-sm">
+                            <div class="grid grid-cols-2">
+                                <div class="px-4 py-2 font-semibold">Name</div>
+                                <div class="px-4 py-2">{{student.name}}</div>
+                            </div>
+                            <div class="grid grid-cols-2">
+                                <div class="px-4 py-2 font-semibold">Roll No.</div>
+                                <div class="px-4 py-2">{{student.rollNum}}</div>
+                            </div>
+
+                            <div class="grid grid-cols-2">
+                                <div class="px-4 py-2 font-semibold">Contact No.</div>
+                                <div class="px-4 py-2">{{student.mobile}}</div>
+                            </div>
+
+                            <div class="grid grid-cols-2">
+                                <div class="px-4 py-2 font-semibold">Email.</div>
+                                <div class="px-4 py-2">
+                                    <a class="text-blue-800" href="mailto:jane@example.com">{{student.email}}</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="my-4"></div>
+
+                <div class="bg-white p-3 shadow-sm rounded-sm">
+
+                    <div class="grid grid-cols-2">
+                        <div>
+                            <div>
+                                <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
+                                    <span clas="text-green-500">
+                                        <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                            viewBox="0 0 24 24" stroke="currentColor">
+                                            <path fill="#fff" d="M12 14l9-5-9-5-9 5 9 5z" />
+                                            <path fill="#fff"
+                                                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
+                                        </svg>
+                                    </span>
+                                    <span class="tracking-wide">Education</span>
+                                </div>
+                                <div class="grid md:grid-cols-2 text-sm">
+
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Course</div>
+                                        <div class="px-4 py-2">{{student.courseName}}</div>
+                                    </div>
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Duration</div>
+                                        <div class="px-4 py-2">{{student.courseDuration}}</div>
+                                    </div>
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Batch</div>
+                                        <div class="px-4 py-2">{{student.batchCode}}</div>
+                                    </div>
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Semester</div>
+                                        <div class="px-4 py-2">{{student.semester}}</div>
+                                    </div>
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Section</div>
+                                        <div class="px-4 py-2">{{student.section}}</div>
+                                    </div>
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Branch Name</div>
+                                        <div class="px-4 py-2">{{student.branchName}}</div>
+                                    </div>
+                                    <div class="grid grid-cols-2">
+                                        <div class="px-4 py-2 font-semibold">Department</div>
+                                        <div class="px-4 py-2">{{student.department}}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {%endblock%}
