fixed bugs and created separate file for profile

--- a/App/Views/Admin/Dashboard/profile.html
+++ b/App/Views/Admin/Dashboard/profile.html
@@ -22,12 +22,12 @@
                             </div>
 
                             <div class="grid grid-cols-2">
-                                <div class="px-4 py-2 font-semibold">Contact No.</div>
+                                <div class="px-4 py-2 font-semibold">Contact No</div>
                                 <div class="px-4 py-2">{{admin.mobile}}</div>
                             </div>
 
                             <div class="grid grid-cols-2">
-                                <div class="px-4 py-2 font-semibold">Email.</div>
+                                <div class="px-4 py-2 font-semibold">Email</div>
                                 <div class="px-4 py-2">
                                     <a class="text-blue-800" href="#">{{admin.email}}</a>
                                 </div>
