--- a/App/Views/Student/Dashboard/Homepage/profile.html
+++ b/App/Views/Student/Dashboard/Homepage/profile.html
@@ -80,7 +80,7 @@
                                     </div>
                                     <div class="grid grid-cols-2">
                                         <div class="px-4 py-2 font-semibold">Section</div>
-                                        <div class="px-4 py-2">{{student.section}}</div>
+                                        <div class="px-4 py-2">{{student.section|ucf}}</div>
                                     </div>
                                     <div class="grid grid-cols-2">
                                         <div class="px-4 py-2 font-semibold">Branch Name</div>
