--- a/App/Views/Admin/Dashboard/Batch/edit.html
+++ b/App/Views/Admin/Dashboard/Batch/edit.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %} {% block title %}Admin | Teachers{% endblock %} {%
 block body %}
-<h3>
-  Batch
-  <br />
-  {{batch.code}}
-  <a class="btn bg-red" href="/admin/deleteBatch/{{batch.id}}">delete</a>
-</h3>
-<form action="/admin/updateBatch" method="post">
+<form action="/admin/updateBatch" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
   <div class="input-field col s12">
     <h4>From</h4>
     <input type="hidden" name="id" value="{{batch.id}}" />
@@ -28,7 +22,10 @@ block body %}
     </select>
     <br />
   </div>
-  <button class="btn bg-orange lighten-1 z-depth-0">Update</button>
+  <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">Update</button>
+  <a href="/admin/deleteBatch/{{batch.id}}" class="text-red-600 hover:text-red-400"> <i
+      class="material-icons-round">delete_outline</i>
+  </a>
 </form>
 <br />
 <a href="/admin/batch">Back to list</a>
