--- a/App/Views/Admin/Dashboard/Classes/edit.html
+++ b/App/Views/Admin/Dashboard/Classes/edit.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %} {% block title %}Admin | Classes{% endblock %} {%
 block body %}
-<h3>
-  {{class.name}} Class
-  <a class="btn bg-red" href="/admin/deleteClasses/{{class.id}}"
-    >delete</a
-  >
-</h3>
-<form action="/admin/updateClasses" method="post">
+<form action="/admin/updateClasses" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
   <div class="input-field">
     <label for="name">Department</label>
     <br>
@@ -14,7 +8,8 @@ block body %}
     <div class="input-field col s12">
       <select name="department" class="browser-default" id="dept">
         {% for dep in deps %}
-        <option {% if dep.id==class.departmentID %}selected="selected"{% endif %} value="{{dep.id}}">{{dep.name}}</option>
+        <option {% if dep.id==class.departmentID %}selected="selected" {% endif %} value="{{dep.id}}">{{dep.name}}
+        </option>
         {% endfor %}
       </select>
     </div>
@@ -25,7 +20,8 @@ block body %}
     <div class="input-field col s12">
       <select name="branch" class="browser-default" id="branch">
         {% for branch in branches %}
-        <option {% if branch.id==class.branchID %}selected="selected"{% endif %} value="{{branch.id}}">{{branch.code}}</option>
+        <option {% if branch.id==class.branchID %}selected="selected" {% endif %} value="{{branch.id}}">{{branch.code}}
+        </option>
         {% endfor %}
       </select>
     </div>
@@ -36,7 +32,8 @@ block body %}
     <div class="input-field col s12">
       <select name="semester" class="browser-default" id="Semester">
         {% for semester in semesters %}
-        <option {% if semester.id==class.semesterID %}selected="selected"{% endif %} value="{{semester.id}}">{{semester.name}}</option>
+        <option {% if semester.id==class.semesterID %}selected="selected" {% endif %} value="{{semester.id}}">
+          {{semester.name}}</option>
         {% endfor %}
       </select>
     </div>
@@ -47,7 +44,8 @@ block body %}
     <div class="input-field col s12">
       <select name="section" class="browser-default" id="section">
         {% for section in sections %}
-        <option {% if section.id==class.section %}selected="selected"{% endif %} value="{{section.id}}">{{section.code}}</option>
+        <option {% if section.id==class.section %}selected="selected" {% endif %} value="{{section.id}}">
+          {{section.code}}</option>
         {% endfor %}
       </select>
     </div>
@@ -58,13 +56,16 @@ block body %}
     <div class="input-field col s12">
       <select name="teacher" class="browser-default" id="teacher">
         {% for teacher in teachers %}
-        <option {% if teacher.id==class.teacherID %}selected="selected"{% endif %} value="{{teacher.id}}">{{teacher.name}}</option>
+        <option {% if teacher.id==class.teacherID %}selected="selected" {% endif %} value="{{teacher.id}}">
+          {{teacher.name}}</option>
         {% endfor %}
       </select>
     </div>
   </div>
-  
-  <button class="btn bg-orange lighten-1 z-depth-0">Update</button>
+
+  <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">Update</button>
+  <a class="text-red-600 hover:text-red-400" href="/admin/deleteClasses/{{class.id}}"><i
+      class="material-icons-round">delete_outline</i></a>
 </form>
 <br />
 <a href="/admin/classes">Back to list</a>
