--- a/App/Views/Admin/Dashboard/Course/edit.html
+++ b/App/Views/Admin/Dashboard/Course/edit.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %} {% block title %}Admin | Courses{% endblock %} {%
 block body %}
-<h3>
-    Courses
-    <br>
-    {{course.name}}
-    <a class="btn bg-red" href="/admin/deleteCourse/{{course.id}}">delete</a>
-</h3>
-<form action="/admin/updateCourse" method="post">
+<form action="/admin/updateCourse" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
     <div class="input-field">
         <label for="name">course Name</label>
         <input type="hidden" name="id" value="{{course.id}}" />
@@ -22,7 +16,10 @@ block body %}
         </select>
         <br>
     </div>
-    <button class="btn bg-orange lighten-1 z-depth-0">Update</button>
+    <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">Update</button>
+    <a class="text-red-600 hover:text-red-400" href="/admin/deleteCourse/{{course.id}}"><i
+            class="material-icons-round">delete_outline</i></a>
+
 </form>
 <br />
 <a href="/admin/course">Back to list</a>
