--- a/App/Views/Admin/Dashboard/Period/index.html
+++ b/App/Views/Admin/Dashboard/Period/index.html
@@ -1,14 +1,36 @@
 {% extends "base.html" %} {% block title %}Admin | Period{% endblock %} {%
 block body %}
-<h4>Periods</h4>
-{% for period in periods%}
-Timing {{period.fromTime}}-{{period.toTime}} <br>
-<a class="btn bg-red" href="/admin/period/{{period.id}}">Edit</a>
-<a class="btn bg-red" href="/admin/deletePeriod/{{period.id}}">Delete</a>
-<br />
-<br />
-{% endfor %}
-
+<div class="flex m-5">
+    <div class="col-span-12">
+        <div class="overflow-auto lg:overflow-visible">
+            <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
+                <thead class="bg-blue-900 text-white">
+                    <tr>
+                        <th class="p-3 lg:w-4 text-left">Serial no.</th>
+                        <th class="p-3 text-center">Timing</th>
+                        <th class="p-3 text-left">Edit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for period in periods%}
+                    <tr class="bg-blue-100 lg:text-black">
+                        <td class="p-3 font-medium capitalize">{{period.id}}</td>
+                        <td class="p-3 text-center">{{period.fromTime}}-{{period.toTime}}</td>
+                        <td class="p-3">
+                            <a href="/admin/period/{{period.id}}" class="text-yellow-400 hover:text-yellow-500 mx-2">
+                                <i class="material-icons-outlined text-base">edit</i>
+                            </a>
+                            <a href="/admin/deletePeriod/{{period.id}}" class="text-red-400 hover:text-red-500 ml-2">
+                                <i class="material-icons-round text-base">delete_outline</i>
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <h4>New Period</h4>
 <form action="/admin/createPeriod" method="post">
     <h5>Timing</h5>
