--- a/App/Views/Admin/Dashboard/Semester/index.html
+++ b/App/Views/Admin/Dashboard/Semester/index.html
@@ -1,14 +1,38 @@
 {% extends "base.html" %} {% block title %}Admin | semester{% endblock %} {%
 block body %}
-<h1>Semesters</h1>
-{% for semester in semesters%} Semester Name: {{semester.name}}
-<br>
-<a class="btn bg-red" href="/admin/semester/{{semester.id}}">Edit</a>
-<a class="btn bg-red" href="/admin/deleteSemester/{{semester.id}}">Delete</a>
-<br />
-<br />
-{% endfor %}
-
+<div class="flex m-5">
+    <div class="col-span-12">
+        <div class="overflow-auto lg:overflow-visible">
+            <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
+                <thead class="bg-blue-900 text-white">
+                    <tr>
+                        <th class="p-3 lg:w-4 text-left">Serial no.</th>
+                        <th class="p-3 text-center">Name</th>
+                        <th class="p-3 text-left">Edit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for semester in semesters%}
+                    <tr class="bg-blue-100 lg:text-black">
+                        <td class="p-3 font-medium capitalize">{{semester.id}}</td>
+                        <td class="p-3 text-center">{{semester.name}}</td>
+                        <td class="p-3">
+                            <a href="/admin/semester/{{semester.id}}"
+                                class="text-yellow-400 hover:text-yellow-500 mx-2">
+                                <i class="material-icons-outlined text-base">edit</i>
+                            </a>
+                            <a href="/admin/deleteSemester/{{semester.id}}"
+                                class="text-red-400 hover:text-red-500 ml-2">
+                                <i class="material-icons-round text-base">delete_outline</i>
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <h4>New semester</h4>
 <form action="/admin/createSemester" method="post">
     <div class="input-field">
