--- a/App/Views/Admin/Dashboard/Student/edit.html
+++ b/App/Views/Admin/Dashboard/Student/edit.html
@@ -1,52 +1,42 @@
 {% extends "base.html" %} {% block title %}Admin | Student{% endblock %} {%
 block body %}
-<h3>
-  {{student.name}}
-  <a class="btn bg-red" href="/admin/deleteStudent/{{student.id}}"
-    >delete</a
-  >
-</h3>
-<form action="/admin/updateStudent" method="post">
-  <div class="input-field">
-    <div class="input-field">
+<form action="/admin/updateStudent" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
+  <div>
+    <div>
       <label for="name">Name</label>
       <input type="hidden" name="id" value="{{student.id}}" />
       <input type="hidden" id="userID" name="userID" value="{{student.userID}}" />
       <input type="text" id="name" name="name" value="{{student.name}}" />
     </div>
-    <div class="input-field">
+    <div>
       <label for="email">Email</label>
       <input type="email" id="email" name="email" value="{{student.email}}" />
     </div>
-    <div class="input-field">
+    <div>
       <label for="mobile">Mobile</label>
       <input type="tel" id="mobile" name="mobile" value="{{student.mobile}}" />
     </div>
-    <div class="input-field">
+    <div>
       <label for="mobile">Roll Num</label>
       <input type="tel" id="rollNum" name="rollNum" value="{{student.rollNum}}" />
     </div>
-    <div class="input-field">
-      <label for="name">Course</label>
+    <div>
+      <label for="course">Course</label>
       <br />
-      <div class="input-field col s12">
-        <select name="course" class="browser-default" id="course">
-          {% for course in courses %}
-          <option {% if course.id==student.courseID %}selected{% endif %} value="{{course.id}}">{{course.name}}</option>
-          {% endfor %}
-        </select>
-      </div>
+      <select name="course" class="browser-default" id="course">
+        {% for course in courses %}
+        <option {% if course.id==student.courseID %}selected{% endif %} value="{{course.id}}">{{course.name}}</option>
+        {% endfor %}
+      </select>
     </div>
-    <div class="input-field">
-      <label for="name">Batch</label>
+    <div>
+      <label for="batch">Batch</label>
       <br />
-      <div class="input-field col s12">
-        <select name="batch" class="browser-default" id="batch">
-          {% for batch in batches %}
-          <option {% if batch.id==student.batchID %}selected{% endif %} value="{{batch.id}}">{{batch.code}}</option>
-          {% endfor %}
-        </select>
-      </div>
+      <select name="batch" class="browser-default" id="batch">
+        {% for batch in batches %}
+        <option {% if batch.id==student.batchID %}selected{% endif %} value="{{batch.id}}">{{batch.code}}</option>
+        {% endfor %}
+      </select>
     </div>
     <div class="input-field">
       <label for="name">Class</label>
@@ -59,8 +49,10 @@ block body %}
         </select>
       </div>
     </div>
-  
-  <button class="btn bg-orange lighten-1 z-depth-0">Update</button>
+  </div>
+  <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">Update</button>
+  <a class="text-red-600 hover:text-red-400" href="/admin/deleteStudent/{{student.id}}"><i
+      class="material-icons-round">delete_outline</i></a>
 </form>
 <br />
 <a href="/admin/student">Back to list</a>
