--- a/App/Views/Admin/Dashboard/Subject/index.html
+++ b/App/Views/Admin/Dashboard/Subject/index.html
@@ -1,14 +1,41 @@
 {% extends "base.html" %} {% block title %}Admin | Subject{% endblock %} {%
 block body %}
-<h4>Subjects</h4>
-{% for subject in subjects%} {{subject.id}}.{{subject.name}} <br>
-Code - {{subject.subjectCode}} <br>
-Deparment - {{subject.department}}
-<a class="btn bg-red" href="/admin/subject/{{subject.id}}">Edit</a>
-<a class="btn bg-red" href="/admin/deleteSubject/{{subject.id}}">Delete</a>
-<br />
-<br />
-{% endfor %}
+<div class="flex m-5">
+    <div class="col-span-12">
+        <div class="overflow-auto lg:overflow-visible">
+            <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
+                <thead class="bg-blue-900 text-white">
+                    <tr>
+                        <th class="p-3 lg:w-4 text-left">Serial no.</th>
+                        <th class="p-3 text-center">Name</th>
+                        <th class="p-3 text-center">Code</th>
+                        <th class="p-3 text-center">Department</th>
+                        <th class="p-3 text-left">Edit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for subject in subjects%}
+                    <tr class="bg-blue-100 lg:text-black">
+                        <td class="p-3 font-medium capitalize">{{subject.id}}</td>
+                        <td class="p-3 text-center">{{subject.name}}</td>
+                        <td class="p-3 text-center">{{subject.subjectCode}}</td>
+                        <td class="p-3 text-center">{{subject.department}}</td>
+
+                        <td class="p-3">
+                            <a href="/admin/subject/{{subject.id}}" class="text-yellow-400 hover:text-yellow-500 mx-2">
+                                <i class="material-icons-outlined text-base">edit</i>
+                            </a>
+                            <a href="/admin/deleteSubject/{{subject.id}}" class="text-red-400 hover:text-red-500 ml-2">
+                                <i class="material-icons-round text-base">delete_outline</i>
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 <h4>New Subject</h4>
 <form action="/admin/createSubject" method="post">
