--- a/App/Views/Admin/Dashboard/Teacher/edit.html
+++ b/App/Views/Admin/Dashboard/Teacher/edit.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %} {% block title %}Admin | Teachers{% endblock %} {%
 block body %}
-<h3>
-  {{teacher.name}} Teachers
-  <a class="btn bg-red" href="/admin/deleteTeacher/{{teacher.id}}"
-    >delete</a
-  >
-</h3>
-<form action="/admin/updateTeacher" method="post">
+<form action="/admin/updateTeacher" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
   <div class="input-field">
     <label for="name">Teacher Name</label>
     <input type="hidden" name="id" value="{{teacher.id}}" />
@@ -19,12 +13,15 @@ block body %}
   <div class="input-field col s12">
     <select name="department" class="browser-default" id="hod">
       {% for dep in deps %}
-      <option {% if dep.id==teacher.departmentID %}selected="selected"{% endif %} value="{{dep.id}}">{{dep.name}}</option>
+      <option {% if dep.id==teacher.departmentID %}selected="selected" {% endif %} value="{{dep.id}}">{{dep.name}}
+      </option>
       {% endfor %}
     </select>
     <br>
   </div>
-  <button class="btn bg-orange lighten-1 z-depth-0">Update</button>
+  <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">Update</button>
+  <a class="text-red-600 hover:text-red-400" class="btn bg-red" href="/admin/deleteTeacher/{{teacher.id}}"><i
+      class="material-icons-round">delete_outline</i></a>
 </form>
 <br />
 <a href="/admin/teacher">Back to list</a>
