--- a/App/Views/Admin/Dashboard/Teacher/index.html
+++ b/App/Views/Admin/Dashboard/Teacher/index.html
@@ -1,12 +1,39 @@
 {% extends "base.html" %} {% block title %}Admin | Teacher{% endblock %} {%
 block body %}
-<h1>Teachers</h1>
-{% for dept in teacher%} {{dept.id}}.{{dept.name}} - {{dept.department}}
-<a class="btn bg-red" href="/admin/teacher/{{dept.id}}">Edit</a>
-<a class="btn bg-red" href="/admin/deleteTeacher/{{dept.id}}">Delete</a>
-<br />
-<br />
-{% endfor %}
+<div class="flex m-5">
+  <div class="col-span-12">
+    <div class="overflow-auto lg:overflow-visible">
+      <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
+        <thead class="bg-blue-900 text-white">
+          <tr>
+            <th class="p-3 lg:w-4 text-left">Serial no.</th>
+            <th class="p-3 text-center">Name</th>
+            <th class="p-3 text-center">Department</th>
+            <th class="p-3 text-left">Edit</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for tcher in teacher%}
+          <tr class="bg-blue-100 lg:text-black">
+            <td class="p-3 font-medium capitalize">{{tcher.id}}</td>
+            <td class="p-3 text-center">{{tcher.name}}</td>
+            <td class="p-3 text-center">{{tcher.department}}</td>
+
+            <td class="p-3">
+              <a href="/admin/teacher/{{tcher.id}}" class="text-yellow-400 hover:text-yellow-500 mx-2">
+                <i class="material-icons-outlined text-base">edit</i>
+              </a>
+              <a href="/admin/deleteTeacher/{{tcher.id}}" class="text-red-400 hover:text-red-500 ml-2">
+                <i class="material-icons-round text-base">delete_outline</i>
+              </a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
 <h4>New Teacher</h4>
 <form action="/admin/createTeacher" method="post">
